# websurfer-mcp

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  config.py  main.py  mcp_url_search_server.py  pyproject.toml  run_server.py  run_tests.py  text_extractor.py  url_validator.py
src/websurfer_mcp/: __init__.py  __main__.py  cli.py  config.py  extractor.py  networking.py  server.py  url_validation.py
tests/: __init__.py  conftest.py  test_config.py  test_extractor.py  test_integration.py  test_networking.py  test_server.py  test_text_extractor.py  test_url_validation.py  test_url_validator.py
